--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,10 +1,12 @@
 body {
     background-color: rgb(255, 255, 255);
-    font-family: Arial, 'Times New Roman', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .nome-titulo {
     font-size: 70px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     color: rgb(49, 49, 49);
 }
 
@@ -19,3 +21,16 @@ body {
     width: 400px;
     height: 400px;
 }
+
+.button {
+    color: #FFF;
+    background-color: #5995DA;
+    font-weight: bold;
+    padding: 20px;
+    text-align: center;
+    border: 2px solid #5D6063;
+    border-radius: 5px;
+  
+    width: 200px;
+    margin: 20px auto;
+  }
