--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,7 +30,14 @@ body {
     text-align: center;
     border: 2px solid #5D6063;
     border-radius: 5px;
+    text-decoration: none;
   
     width: 200px;
     margin: 20px auto;
+  }
+
+  .button:hover {
+    background-color: #FFF;
+    color: #5995DA;
+    text-decoration: underline;
   }
