--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,55 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    background-color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(255, 255, 255);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .nome-titulo {
-    font-size: 70px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: bold;
-    color: rgb(49, 49, 49);
+  font-size: 70px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: rgb(49, 49, 49);
 }
 
 .nome-filme {
-    font-size: 50px;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
-    text-decoration: underline;
+  font-size: 50px;
+  font-family: 'Courier New', Courier, monospace;
+  font-style: italic;
+  text-decoration: underline;
 }
 .imagem-formato {
-    min-width: 100px;
-    min-height: 100px;
-    max-width: 700px;
-    max-height: 700px;
+  min-width: 100px;
+  min-height: 100px;
+  max-width: 700px;
+  max-height: 700px;
 }
 
 #camera {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
+}
+
+.bloco-imagem{
+  display: flex;
+  justify-content: center;
 }
 
 .button {
-    color: #FFF;
-    background-color: #5995DA;
-    font-weight: bold;
-    padding: 20px;
-    text-align: center;
-    border: 2px solid #5D6063;
-    border-radius: 5px;
-    text-decoration: none;
-  
-    width: 200px;
-    margin: 20px auto;
-  }
+  display:block;
+  color: #FFF;
+  background-color: #5995DA;
+  font-weight: bold;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #5D6063;
+  border-radius: 5px;
+  text-decoration: none;
 
-  .button:hover {
-    background-color: #FFF;
-    color: #5995DA;
-    text-decoration: underline;
-  }
+  width: 200px;
+  margin: 20px auto;
+}
 
-  .container {
-    display: flex;
-    background-color: lightgray;
+.button:hover {
+  background-color: #FFF;
+  color: #5995DA;
+  text-decoration: underline;
+}
 
-  }
+
+
+.container {
+  margin: 10px;
+  display: flex;
+  background-color: lightgray;
+  justify-content: center;
+  align-content:center;
+}
+
+.content{
+  width: 80%;
+  max-width: 1000px;
+  padding: 20px;
+  background-color: #ededed;
+  text-align: left;
+
+}
