--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,9 +28,11 @@ body {
 .imagem-formato {
   min-width: 100px;
   min-height: 100px;
-  max-width: 700px;
-  max-height: 700px;
+  max-width: 600px;
+  max-height: 600px;
 }
+
+
 
 #camera {
   width: 400px;
@@ -66,11 +68,12 @@ body {
 
 
 .container {
-  margin: 10px;
+  margin: 40px;
+  padding: 20px;
   display: flex;
   background-color: lightgray;
   justify-content: center;
-  align-content:center;
+  align-items: center;
 }
 
 .content{
