--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   background-color: rgb(255, 255, 255);
   font-family: Arial, Helvetica, sans-serif;
@@ -56,10 +50,15 @@ body {
   height: 50px;
 }
 
+.flex-align{
+  display:flex;
+  align-items:center;
+}
+
 .flex-streaming{
   display:flex;
   gap:20px;
-  background-color: rgb(255, 255, 255)
+  background-color: rgba(200, 200, 200, 0.1)
 }
 
 #camera {
