--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,6 +9,7 @@ body {
   font-weight: bold;
   color: rgb(49, 49, 49);
   text-align: center;
+  text-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
 }
 
 .nome-filme {
@@ -17,6 +18,7 @@ body {
   font-style: italic;
   text-decoration: underline;
   margin: 50px 0 20px 0;
+  text-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
 }
 
 .descricao-filme{
@@ -84,6 +86,7 @@ body {
   border: 2px solid #5D6063;
   border-radius: 5px;
   text-decoration: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
   width: fit-content;
   margin: 20px auto;
@@ -106,6 +109,7 @@ body {
   background-color: lightgray;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .content{
@@ -114,7 +118,7 @@ body {
   padding: 20px;
   background-color: #ededed;
   text-align: left;
-
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 hr {
